회원가입 모달창 css(300~310번) 수정

--- a/static/style.css
+++ b/static/style.css
@@ -299,12 +299,14 @@ ul {
 
 .validation_id {
     font-size: 9pt;
-    color: red;
+    color: darkgrey;
+    margin-bottom: 20px;
 }
 
 .validation_pw {
     font-size: 9pt;
-    color: red;
+    color: darkgrey;
+    margin-bottom: 20px;
 }
 
 .animate {
