--- a/templates/index.html
+++ b/templates/index.html
@@ -102,11 +102,11 @@
                 <label><b>아이디</b></label>
                 <input type="text" placeholder="가입하실 아이디를 입력해주세요" name="uname" required>
                 <button class="overlap">중복확인</button>
-                <p class="validation_id" style="margin-bottom: 20px;">이미 사용중인 아이디입니다.</p>
+                <p class="validation_id">아이디는 2~10자의 영문과 숫자, 일부 특수문자만 입력 가능합니다.</p>
                 <label><b>비밀번호</b></label>
                 <input type="password" placeholder="비밀번호를 입력해주세요 (영문숫자 조합 8자리이상)" name="psw" required>
                 <input type="password" placeholder="비밀번호를 재확인 해주세요" name="psw" required>
-                <p class="validation_pw" style="margin-bottom: 20px;">비밀번호가 일치하지 않습니다.</p>
+                <p class="validation_pw">영문과 숫자 일부 특수문자(!@#$%^&*) 조합의 8~20자의 비밀번호를 설정해주세요.</p>
                 <button type="submit">가입하기</button>
             </div>
         </form>
