--- a/templates/index.html
+++ b/templates/index.html
@@ -7,10 +7,11 @@
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="../static/style.css">
+
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
             integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
             crossorigin="anonymous"></script>
+    <link rel="stylesheet" type="text/css" href="../static/style.css">
     <!-- JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
@@ -76,7 +77,11 @@
             </div>
         </div>
     </div>
-    <div id="id01" class="modal">
+    <!--모달 상세이미지-->
+    </div>
+</div>
+
+<div id="id01" class="modal">
         <form class="modal-content animate" method="post">
             <div class="imgcontainer">
                 <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span>
@@ -84,10 +89,10 @@
             <div class="container">
                 <label><b>아이디</b></label>
                 <input type="text" placeholder="아이디를 입력해주세요" name="uname" required>
-                <p class="validation_id" style="margin-bottom: 20px;">등록되지 않은 아이디입니다.</p>
+<!--                <p class="validation_id" style="margin-bottom: 20px;">등록되지 않은 아이디입니다.</p>-->
                 <label><b>비밀번호</b></label>
                 <input type="password" placeholder="비밀번호를 입력해주세요" name="psw" required>
-                <p class="validation_pw" style="margin-bottom: 20px;">비밀번호가 올바르지 않습니다.</p>
+<!--                <p class="validation_pw" style="margin-bottom: 20px;">비밀번호가 올바르지 않습니다.</p>-->
                 <button type="submit">로그인</button>
             </div>
         </form>
@@ -125,9 +130,7 @@
                 마구마구 넣을거에요???? 여기에는 글자를 마구마구 넣을거에요????
             </div>
         </div>
-    </div><!--모달 상세이미지-->
     </div>
-</div>
 </div>
 </body>
 </html>
