--- a/templates/index.html
+++ b/templates/index.html
@@ -60,28 +60,25 @@
 </div>
 <div class="content" id="home">
     <div class="content2" id='main'>
-
-    <!-- 상세이미지 클릭시 모달 -->
+    </div>
+     <!-- 상세이미지 클릭시 모달 -->
     <div class="modal">
-        <div class="modal_content" title="클릭하면 창이 닫힙니다.">
-            <div class="book_image">
-                <img src="http://image.kyobobook.co.kr/images/book/xlarge/729/x9791165343729.jpg" width="440px"
-                     height="565px">
-            </div>
-            <div class="book_title">
-                이 책을 소개합니다~! 만약에 글이
-            </div>
-            <div class="book_info">
-                여기에는 글자를 마구마구 넣을거에요???? 여기에는 글자를 마구마구 넣을거에요???? 여기에는 글자를 마구마구 넣을거에요???? 여기에는 글자를 마구마구 넣을거에요???? 여기에는 글자를
-                마구마구 넣을거에요???? 여기에는 글자를 마구마구 넣을거에요????
+            <div class="modal_content" title="클릭하면 창이 닫힙니다.">
+                <div class="book_image">
+                    <img src="http://image.kyobobook.co.kr/images/book/xlarge/729/x9791165343729.jpg" width="440px"
+                         height="565px">
+                </div>
+                <div class="book_title">
+                    이 책을 소개합니다~! 만약에 글이
+                </div>
+                <div class="book_info">
+                    여기에는 글자를 마구마구 넣을거에요???? 여기에는 글자를 마구마구 넣을거에요???? 여기에는 글자를 마구마구 넣을거에요???? 여기에는 글자를 마구마구 넣을거에요???? 여기에는 글자를
+                    마구마구 넣을거에요???? 여기에는 글자를 마구마구 넣을거에요????
+                </div>
             </div>
         </div>
-    </div>
-    <!--모달 상세이미지-->
-    </div>
-</div>
-
-<div id="id01" class="modal">
+    <!--모달 로그인-->
+    <div id="id01" class="modal">
         <form class="modal-content animate" method="post">
             <div class="imgcontainer">
                 <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span>
@@ -96,7 +93,7 @@
                 <button type="submit">로그인</button>
             </div>
         </form>
-    </div><!--모달 로그인-->
+    </div>
     <!--모달 회원가입-->
     <div id="id02" class="modal">
         <form class="modal-content animate" method="post">
@@ -115,7 +112,7 @@
                 <button type="submit">가입하기</button>
             </div>
         </form>
-    </div><!--모달 회원가입-->
+    </div>
     <!--모달 상세이미지-->
     <div class="modal_detail">
         <div class="detail_content" title="클릭하면 창이 닫힙니다.">
@@ -131,6 +128,9 @@
             </div>
         </div>
     </div>
+</div>
+
+
 </div>
 </body>
 </html>
