--- a/static/style.css
+++ b/static/style.css
@@ -40,35 +40,6 @@ li {
     color: white;
 }
 
-/* .inner{
-    width: 1000px;
-    display: flex;
-    align-items: center;
-    background-color:yellowgreen;
-    display: none;
-}
-.list-seller{
-    width: 1170px;
-    margin: auto;
-    height: 35px;
-    display: flex;
-    align-items: center;
-    font-size: 15px;
-    color: white;
-}
-.steady-seller{
-    width: 250px;
-    height: 35px;
-    display: flex;
-    align-items: center;
-    font-size: 15px;
-    color: white;
-    margin: 0;
-} */
-/*.best-seller1 {*/
-/*    margin-right: 25px;*/
-/*}*/
-
 .content2 {
     display: grid;
     background-color: white;
@@ -77,7 +48,7 @@ li {
     margin: 35px auto;
     grid-template-columns: 1fr 1fr 1fr;
     row-gap: 35px;
-    column-gap: 30px;
+    column-gap: 70px;
     justify-content: stretch;
     place-content: space-between center;
 }
@@ -85,7 +56,6 @@ li {
 /*<----여기서부터 btn-primary까지 최종적으로 추가한 카드 관련 css입니당---->*/
 
 .card {
-    width: 300px;
     margin-bottom: 20px;
 }
 
@@ -104,14 +74,6 @@ li {
     width: 100px;
     margin: auto;
 }
-
-/*.best-seller2 {*/
-/*    margin: auto 25px;*/
-/*}*/
-
-/*.best-seller3 {*/
-/*    margin: auto 25px;*/
-/*}*/
 
 /* 모달이미지상세 - 송현 */
 .modal_detail{
@@ -392,4 +354,7 @@ ul {
     width: 30% !important;
     right: 35px !important;
 }
-
+.member_box li a {
+    color: black;
+    text-decoration: none !important;
+}
