--- a/static/style.css
+++ b/static/style.css
@@ -62,12 +62,12 @@ li {
 .card-img-top {
     width: 220px;
     height: 350px;
-    margin: 20px auto 0 auto;
+    margin: 40px auto 0 auto;
 }
 
 .card-body {
     width: 300px;
-    margin: 0 auto;
+    margin: 0 auto 20px;
 }
 
 .btn-primary {
@@ -151,7 +151,7 @@ input[type=text], input[type=password] {
 }
 
 button {
-  background-color: #6485F5;
+  background-color: rgb(0, 112, 240);
   color: white;
   padding: 14px 20px;
   margin: 8px 0;
@@ -300,6 +300,7 @@ ul {
 
 ul {
     padding-inline-start: 0;
+    margin-top: auto;
 }
 .bookParent{
     width: 100%;
