로고 수정, 로고 하이퍼링크 적용

--- a/templates/login.html
+++ b/templates/login.html
@@ -4,6 +4,11 @@
 <script defer src="{{ url_for('static', filename='login.js') }}"></script>
 {% endblock%}
 {% block content %}
+<h1 class="gohome">
+    <a href="/" class="gohome2">
+        <img src="../static/img/logo.svg" class="logoImg">
+    </a>
+</h1>     
 <form class="modal-content animate" method="post">
     <div class="imgcontainer">
     </div>
