--- a/templates/main.html
+++ b/templates/main.html
@@ -5,7 +5,7 @@
 {% endblock%}
 {% block content %}
 <nav class="top">
-    <div class="topChild"><img src="../static/img/logo.svg" class="logoImg">
+    <div class="topChild"><a href="/"><img src="../static/img/logo.svg" class="logoImg"></a>
         <ul class="member_box">
             <li style="width:auto;"><a href="/login">로그인</a></li>
             <li style="width:auto;"><a href="/signup">회원가입</a></li>
