--- a/templates/signup.html
+++ b/templates/signup.html
@@ -13,15 +13,115 @@
     <div class="imgcontainer">
     </div>
     <div class="container">
-        <label><b>아이디</b></label>
-        <input type="text" placeholder="가입하실 아이디를 입력해주세요" name="uname" required>
-        <button class="overlap">중복확인</button>
-        <p class="validation_id">아이디는 2~10자의 영문과 숫자, 일부 특수문자만 입력 가능합니다.</p>
-        <label><b>비밀번호</b></label>
-        <input type="password" placeholder="비밀번호를 입력해주세요 (영문숫자 조합 8자리이상)" name="psw" required>
-        <input type="password" placeholder="비밀번호를 재확인 해주세요" name="psw" required>
-        <p class="validation_pw">영문과 숫자 일부 특수문자(!@#$%^&*) 조합의 8~20자의 비밀번호를 설정해주세요.</p>
-        <button type="submit">가입하기</button>
+        <div>
+            <label><b>아이디</b></label>
+            <div>
+                <input id="user-id" type="text" placeholder="가입하실 아이디를 입력해주세요" name="uname" required>
+{#                <input id="user-id" placeholder="가입하실 아이디를 입력해주세요" name="uname">#}
+                <button onclick="check_dup()" id="btn-check-dup" class="overlap">중복확인</button>
+{#                <button onclick="check_dup()" id="btn-check-dup" class="overlap">중복확인</button>#}
+            </div>
+        </div>
+
+        <p id="help-id" class="validation_id">아이디는 2~10자의 영문과 숫자, 일부 특수문자(-_.)만 입력 가능합니다.(영문,숫자 필수입력)</p>
+{#        <p id="help-id" >아이디는 2~10자의 영문과 숫자, 일부 특수문자(-_.)만 입력 가능합니다.(영문,숫자 필수입력)</p>#}
+
+        <div>
+            <label><b>비밀번호</b></label>
+            <div>
+                <input id="user-pw" type="password" placeholder="비밀번호를 입력해주세요 (영문숫자 조합 8자리이상)" name="psw" required>
+{#                <input id="user-pw" placeholder="비밀번호를 입력해주세요 (영문숫자 조합 8자리이상)" name="psw" >#}
+            </div>
+            <p id="help-password" class="validation_pw">영문과 숫자, 일부 특수문자(!@#$%^&*) 조합의 8~20자의 비밀번호를 설정해주세요.(영문, 숫자 필수입력)</p>
+            <div>
+                <input id="user-pw2" type="password" placeholder="비밀번호를 재확인 해주세요" name="psw" required>
+{#                <input id="user-pw2" placeholder="비밀번호를 재확인 해주세요" name="psw" >#}
+            </div>
+            <p id="help-password2" class="validation_pw">영문과 숫자, 일부 특수문자(!@#$%^&*) 조합의 8~20자의 비밀번호를 설정해주세요.(영문, 숫자 필수입력)</p>
+{#            <p id="help-password" >영문과 숫자, 일부 특수문자(!@#$%^&*) 조합의 8~20자의 비밀번호를 설정해주세요.(영문, 숫자 필수입력)</p>#}
+        </div>
+        <button onclick="sign_up()" type="submit">가입하기</button>
     </div>
 </form>
 {% endblock %}
+
+
+
+{#<section class="section">#}
+{#    <div class="container">#}
+{#        <div class="box" style="max-width: 480px;margin:auto">#}
+{#            <article class="media">#}
+{#                <div class="media-content">#}
+{#                    <div class="content">#}
+{#                        <div class="field has-addons">#}
+{#                            <div class="control has-icons-left" style="width:100%">#}
+{#                                <input id="input-username" class="input" type="text" placeholder="아이디">#}
+{#                                <span class="icon is-small is-left"><i class="fa fa-user"></i></span>#}
+{#                            </div>#}
+{#                            <div id="btn-check-dup" class="control">#}
+{#                                <button class="button is-sparta" onclick="check_dup()">중복확인</button>#}
+{#                            </div>#}
+{##}
+{#                        </div>#}
+{#                        <p id="help-id" class="help">아이디는 2-10자의 영문과 숫자와 일부 특수문자(._-)만 입력 가능합니다.</p>#}
+{#                        <p id="help-id-login" class="help is-danger"></p>#}
+{##}
+{#                        <div class="field">#}
+{#                            <div class="control has-icons-left">#}
+{#                                <input id="input-password" class="input" type="password" placeholder="비밀번호">#}
+{#                                <span class="icon is-small is-left"><i class="fa fa-lock"></i></span>#}
+{#                            </div>#}
+{#                            <p id="help-password" class="help">영문과 숫자 조합의 8-20자의 비밀번호를 설정해주세요. 특수문자(!@#$%^&*)도 사용#}
+{#                                가능합니다.</p>#}
+{#                        </div>#}
+{##}
+{##}
+{#                    </div>#}
+{#                    <div id="div-sign-in-or-up" class="has-text-centered">#}
+{#                        <nav class="level is-mobile">#}
+{#                            <button class="level-item button is-sparta" onclick="sign_in()">#}
+{#                                로그인#}
+{#                            </button>#}
+{##}
+{#                        </nav>#}
+{#                        <hr>#}
+{#                        <h4 class="mb-3">아직 회원이 아니라면</h4>#}
+{#                        <nav class="level is-mobile">#}
+{##}
+{#                            <button class="level-item button is-sparta is-outlined"#}
+{#                                    onclick="toggle_sign_up()">#}
+{#                                회원가입하기#}
+{#                            </button>#}
+{#                        </nav>#}
+{#                    </div>#}
+{##}
+{#                    <div id="sign-up-box">#}
+{#                        <div class="mb-5">#}
+{#                            <div class="field">#}
+{#                                <div class="control has-icons-left" style="width:100%">#}
+{#                                    <input id="input-password2" class="input" type="password"#}
+{#                                           placeholder="비밀번호 재입력">#}
+{#                                    <span class="icon is-small is-left"><i class="fa fa-lock"></i></span>#}
+{#                                </div>#}
+{#                                <p id="help-password2" class="help">비밀번호를 다시 한 번 입력해주세요.</p>#}
+{##}
+{#                            </div>#}
+{#                        </div>#}
+{#                        <nav class="level is-mobile">#}
+{#                            <button class="level-item button is-sparta" onclick="sign_up()">#}
+{#                                회원가입#}
+{#                            </button>#}
+{#                            <button class="level-item button is-sparta is-outlined" onclick="toggle_sign_up()">#}
+{#                                취소#}
+{#                            </button>#}
+{#                        </nav>#}
+{#                    </div>#}
+{##}
+{##}
+{#                </div>#}
+{#            </article>#}
+{#        </div>#}
+{##}
+{#    </div>#}
+{#</section>#}
+
