--- a/templates/login.html
+++ b/templates/login.html
@@ -13,13 +13,24 @@
     <div class="imgcontainer">
     </div>
     <div class="container">
-        <label><b>아이디</b></label>
-        <input type="text" placeholder="아이디를 입력해주세요" name="uname" required>
-<!--                <p class="validation_id" style="margin-bottom: 20px;">등록되지 않은 아이디입니다.</p>-->
-        <label><b>비밀번호</b></label>
-        <input type="password" placeholder="비밀번호를 입력해주세요" name="psw" required>
-<!--                <p class="validation_pw" style="margin-bottom: 20px;">비밀번호가 올바르지 않습니다.</p>-->
-        <button type="submit">로그인</button>
+        <div>
+            <label><b>아이디</b></label>
+            <div>
+                <input id="input-id" type="text" placeholder="아이디를 입력해주세요" name="uname" required>
+            </div>
+            <p id="help-id-login" ></p>
+            <!--                <p class="validation_id" style="margin-bottom: 20px;">등록되지 않은 아이디입니다.</p>-->
+        </div>
+
+        <div>
+            <label><b>비밀번호</b></label>
+            <div>
+                <input id="input-pw" type="password" placeholder="비밀번호를 입력해주세요" name="psw" required>
+                <!--                <p class="validation_pw" style="margin-bottom: 20px;">비밀번호가 올바르지 않습니다.</p>-->
+            </div>
+            <p id="help-pw-login" ></p>
+        </div>
+        <button onclick="sign_in()" type="submit">로그인</button>
     </div>
 </form>
 {% endblock %}
