--- a/static/style.css
+++ b/static/style.css
@@ -18,6 +18,9 @@ li {
     margin: auto;
     width: 1170px;
     background-color: white;
+    position: sticky;
+    z-index: 100;
+    top: 0;
 }
 .member_box{
     flex: 1;
@@ -185,6 +188,9 @@ ul {
     padding-inline-start: 0;
 }
 .bookParent{
+    position: sticky;
+    z-index: 100;
+    top: 60px;
     width: 100%;
     background-color: rgb(0, 112, 240);
 }
