--- a/templates/memberView.html
+++ b/templates/memberView.html
@@ -8,6 +8,7 @@
     <div class="topChild"><a href="/"><img src="../static/img/logo.svg" class="logoImg"></a>
         <ul class="member_box">
             <li class="member" style="width:auto;">회원님, 환영합니다!</li>
+            <li style="width:auto;"><a href="/">로그아웃</a></li>
         </ul>
     </div>
 </nav>
