--- a/static/style.css
+++ b/static/style.css
@@ -1,5 +1,6 @@
 body{
     margin: 0 0 0 0;
+    font-family: 'IBM Plex Sans KR', sans-serif;
 }
 a {
     text-decoration: none;
@@ -16,18 +17,18 @@ li {
 .top{
     display: flex;
     margin: auto;
-    width: 1170px;
+    width: 100%;
     background-color: white;
-    position: sticky;
-    z-index: 100;
+    position: fixed;
     top: 0;
+    padding: 0 10px 0 30px;
 }
 .member_box{
     flex: 1;
     display: flex;
     justify-content: flex-end;
     align-items: center;
-    
+
 }
 .member_box li:nth-child(even) {
     margin-left: 40px;
@@ -42,6 +43,11 @@ li {
 .favorite{
     font-size: 16px;
     color: white;
+}
+
+.content {
+    margin-top: 170px;
+    z-index: 1;
 }
 
 .content2 {
@@ -188,11 +194,10 @@ ul {
     padding-inline-start: 0;
 }
 .bookParent{
-    position: sticky;
-    z-index: 100;
-    top: 60px;
     width: 100%;
     background-color: rgb(0, 112, 240);
+    position: fixed;
+    top:60px;
 }
 .book {
     color: white;
@@ -341,7 +346,7 @@ ul {
 }
 .seller1:hover .bestChild{
     display: flex;
-    justify-content: space-between;    
+    justify-content: space-between;
 }
 .seller2:hover .steadyChild{
     display: flex;
@@ -365,4 +370,9 @@ ul {
 .member_box li a {
     color: black;
     text-decoration: none !important;
+}
+
+.header {
+    position: fixed;
+    z-index: 9;
 }
