--- a/static/style.css
+++ b/static/style.css
@@ -21,7 +21,6 @@ li {
     background-color: white;
     position: fixed;
     top: 0;
-    padding: 0 10px 0 30px;
 }
 .member_box{
     flex: 1;
@@ -34,7 +33,8 @@ li {
     margin-left: 40px;
 }
 .topChild{
-    flex: 1;
+    width: 1170px;
+    margin: auto;
     display: flex;
     height: 60px;
     align-items: center;
