--- a/static/style.css
+++ b/static/style.css
@@ -21,6 +21,7 @@ li {
     background-color: white;
     position: fixed;
     top: 0;
+    z-index: 5000;
 }
 .member_box{
     flex: 1;
@@ -198,6 +199,7 @@ ul {
     background-color: rgb(0, 112, 240);
     position: fixed;
     top:60px;
+    z-index: 5000;
 }
 .book {
     color: white;
