--- a/templates/index.html
+++ b/templates/index.html
@@ -23,6 +23,7 @@
             crossorigin="anonymous"></script>
 
     <script src="https://kit.fontawesome.com/9373a70b51.js" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
 
     <!-- 구글폰트 -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
