--- a/templates/signup.html
+++ b/templates/signup.html
@@ -34,7 +34,7 @@
             </div>
             <!-- <p id="help-password2" class="validation_pw">영문과 숫자, 일부 특수문자(!@#$%^&*) 조합의 8~20자의 비밀번호를 설정해주세요.(영문, 숫자 필수입력)</p> -->
         </div>
-        <button onclick="sign_up()" type="submit">가입하기</button>
+        <button onclick="sign_up()" type="button">가입하기</button>
     </div>
 </form>
 {% endblock %}
