--- a/templates/memberView.html
+++ b/templates/memberView.html
@@ -6,7 +6,7 @@
 {% block content %}
 <nav class="top">
     <div class="topChild"><a href="/"><img src="../static/img/logo.svg" class="logoImg"></a>
-        <ul class="member_box">
+        <ul class="member_box" id="member">
             <li class="member" style="width:auto;">회원님, 환영합니다!</li>
             <li style="width:auto;"><a href="/">로그아웃</a></li>
         </ul>
