--- a/templates/memberView.html
+++ b/templates/memberView.html
@@ -9,6 +9,7 @@
         <ul class="member_box" id="member">
             <li class="member" style="width:auto;">회원님, 환영합니다!</li>
             <li style="width:auto;"><a href="/">로그아웃</a></li>
+{#            쿠키삭제기능 구현 못함#}
         </ul>
     </div>
 </nav>
