[add]리드미 추가

--- a/templates/login.html
+++ b/templates/login.html
@@ -30,7 +30,7 @@
             </div>
             <p id="help-pw-login" ></p>
         </div>
-        <button onclick="sign_in()" type="submit">로그인</button>
+        <button onclick="sign_in" type="submit">로그인</button>
     </div>
 </form>
 {% endblock %}
