--- a/templates/index.html
+++ b/templates/index.html
@@ -25,6 +25,8 @@
     <script src="https://kit.fontawesome.com/9373a70b51.js" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>    
     <!-- 구글폰트 -->
+<link rel="shortcut icon" href="#">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap" rel="stylesheet">
